# scikit-learn-intelex

./: .gitignore  requirements-dev.txt  setup.py
daal4py/: __init__.py
daal4py/onedal/: __init__.py
daal4py/onedal/common/: __init__.py  compute.h  train.h  utils.h  utils.py  validation.py
daal4py/onedal/data/: data.cpp  data.h  utils.h
daal4py/onedal/data/tests/: test_data.py
daal4py/onedal/data_management/: data.h  utils.h
daal4py/onedal/prims/: __init__.py  kernel_functions.pxi  kernel_functions.py  kernel_functions.pyx  kernel_functions_py.cpp  kernel_functions_py.h  save_desc.i
daal4py/onedal/prims/tests/: test_kernel_function.py  test_kernel_functions.py
daal4py/onedal/svm/: svm.pxi  svm.py  svm.pyx  svm_py.cpp  svm_py.h
daal4py/onedal/svm/tests/: test_svc.py  test_svr.py
daal4py/onedal4py/data_management/: data.cpp
daal4py/onedal4py/svm/: __init__.py  svm.cpp  svm.pxi  svm.py  svm.pyx  svm_dpc_py.cpp  svm_py.cpp  svm_py.h
daal4py/sklearn/linear_model/: _coordinate_descent_0_21.py  _coordinate_descent_0_23.py  _ridge_0_21.py  _ridge_0_22.py
daal4py/sklearn/monkeypatch/: dispatcher.py
daal4py/sklearn/neighbors/: __init__.py  _regression.py
examples/onedal/: kernel_functions.py  svm_classification.py
oneapi_examples/: init_svm.py  sklearn_api.py  svc_simple.py
onedal/: dal.cpp  onedal.pyx
onedal/common/: __init__.py  utils.py  validation.py
onedal/common/backend/: compute.h  infer.h  train.h
onedal/data/backend/: data.cpp  data.h  utils.h
onedal/data/tests/: test_data.py
onedal/datatypes/: data_conversion.cpp
onedal/ensemble/: __init__.py  forest.cpp  forest.py
onedal/prims/: kernel_functions.py  kernel_functions.pyx
onedal/prims/backend/: kernel_functions_py.cpp  kernel_functions_py.h
onedal/prims/tests/: test_kernel_functions.py
onedal/svm/: svm.pxi  svm.py  svm.pyx
onedal/svm/backend/: svm_py.cpp  svm_py.h
onedal/svm/tests/: test_svc.py  test_svr.py
scripts/: CMakeLists.txt  build_backend.py  version.py
sklearnex/: dispatcher.py
sklearnex/svm/: __init__.py  _base.py  _classes.py
sklearnex/svm/tests/: test_svm.py
